# guess_who

./: Dockerfile  constants.py  demo.py  guess_who.py  init.sh  openai_calls.py  pyproject.toml  stam.py  todos  utils.py
dialogue/: ask_card.py  ask_player_name.py  ask_your_card.py  introduction.py  question_to_condition.py  system_message.py  turn_ai.py  turn_computer.py  turn_player.py
files/: Characteristics_Matrix.xlsx
game_data/: board.py  characters.py  game_state.py  image.py
openai_calls/: constants.py  prompt2speech.py  speech2text.py  text2speech.py  text2text.py
