[tool.poetry]
name = "guess-who"
version = "0.1.0"
description = ""
authors = ["alana <alana@ai21.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
openai = "^1.58.1"
pyaudio = "^0.2.14"
typing-extensions = "^4.12.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
